# embedded-cli-for-qpcpp

./: .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  shared-active-object-for-qp.md
.github/workflows/: cmake.yml
drivers/: CMakeLists.txt
drivers/characterDevice/: CMakeLists.txt
drivers/characterDevice/include/: characterDeviceInterface.hpp
examples/: CMakeLists.txt
examples/hwLockCtrlService/: CMakeLists.txt
examples/hwLockCtrlService/include/: hwLockCtrlSelfTestEvent.hpp
examples/hwLockCtrlService/src/: hwLockCtrlService.cpp
examples/hwLockCtrlService/test/: CMakeLists.txt  hwLockCtrlServiceTests.cpp
examples/linux-example/: CMakeLists.txt  linuxCharacterDevice.hpp  main.cpp
include/: cms_embedded_cli_signal_range.hpp  cms_pubsub.hpp  pingPongEvents.hpp  pubsub_signals.hpp
services/: CMakeLists.txt
services/embeddedCliService/: CMakeLists.txt  LICENSE.txt
services/embeddedCliService/include/: embeddedCliCommandBinding.hpp  embeddedCliEvent.hpp  embeddedCliService.hpp  embeddedCliServicePubSubSignals.hpp
services/embeddedCliService/src/: embeddedCliService.cpp  embedded_cli_impl.c
services/embeddedCliService/test/: CMakeLists.txt  embeddedCliServiceTests.cpp  embeddedCliServiceTestsWithoutPoolLeakDetection.cpp
test_support/: CMakeLists.txt
test_support/mocks/: CMakeLists.txt
test_support/mocks/characterDevice/: CMakeLists.txt  mockCharacterDevice.cpp  mockCharacterDevice.hpp
